# textual-vimkeys-input

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE1_COMPLETION.md  PHASE2_PROGRESS.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  run_example.sh
.github/: CICD_SETUP.md
.github/workflows/: cd.yml  ci.yml
docs/: QUICKSTART.md  examples.md  user-guide.md
examples/: 01_spike.py  02_simple_chat.py  03_streaming_chat.py
plans/: CHAT_APP.md  IMPLEMENTATION.md  INDEX.md  README.md  SPIKE_GUIDE.md  VIM_TEXTAREA.md
tests/: __init__.py  test_de_command.py  test_editing.py  test_navigation.py  test_operator_motion.py  test_search.py  test_vim_modes.py  test_visual.py
vimkeys_input/: __init__.py  count_handler.py  marks.py  operator_pending.py  vim_modes.py  vim_textarea.py  vim_textarea_old.py
vimkeys_input/operations/: __init__.py  editing.py  navigation.py  search.py  text_objects.py  visual.py
