[project]
name = "textual-vimkeys-input"
version = "0.3.2"
description = "Comprehensive Vim-style modal editing widget for Textual with operator+motion, text objects, and visual mode"
readme = "README.md"
authors = [{name = "Jason Cronquist", email = "jason@example.com"}]
maintainers = [{name = "Jason Cronquist", email = "jason@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "textual",
    "vim",
    "vi",
    "modal-editing",
    "tui",
    "terminal",
    "input",
    "widget",
    "text-editor",
    "command-mode",
    "visual-mode",
    "keybindings"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Topic :: Text Editors",
    "Typing :: Typed",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
]

[project.urls]
Homepage = "https://github.com/jcronq/textual-vimkeys-input"
Documentation = "https://github.com/jcronq/textual-vimkeys-input/blob/main/README.md"
Repository = "https://github.com/jcronq/textual-vimkeys-input"
"Bug Tracker" = "https://github.com/jcronq/textual-vimkeys-input/issues"
Changelog = "https://github.com/jcronq/textual-vimkeys-input/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "textual-dev>=1.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vimkeys_input"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py311"
